@@ -28,8 +28,8 @@
 
 /* Configuration info structure for http_io store */
 struct http_io_conf {
-    const char          *accessId;
-    const char          *accessKey;
+    char                *accessId;
+    char                *accessKey;
     const char          *accessType;
     const char          *baseURL;
     const char          *region;
@@ -44,6 +44,7 @@ struct http_io_conf {
     int                 debug_http;
     int                 quiet;
     int                 rrs;                        // reduced redundancy storage
+    int                 ec2iam;                     // download credentials from EC2 meta-data
     int                 compress;                   // zlib compression level
     int                 vhost;                      // use virtual host style URL
     u_int               *nonzero_bitmap;            // is set to NULL by http_io_create()
